2007-06-12  Alan McGovern <alan.mcgovern@gmail.com> 

	Removed typo

2007-05-31  Alan McGovern <alan.mcgovern@gmail.com> 

	* Collections/BEncodedKeyValuePair.cs: Added #regions

2007-05-31  Alan McGovern <alan.mcgovern@gmail.com> 

	* Collections/BEncodedKeyValuePair.cs: Added #regions
